<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/light_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View style="@style/horizontal_split" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/home_page_classify_construction"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_construction" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type1" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/home_page_classify_civilization"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_civicism" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type2" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/horizontal_split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/home_page_classify_electric"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_electro" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type3" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/home_page_classify_road"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_road" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type4" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/horizontal_split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/home_page_classify_water_cons"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_water_cons" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type5" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/home_page_classify_railway"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_railway" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type6" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/horizontal_split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/home_page_classify_mining"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_mining" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type7" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/home_page_classify_airport"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_airport" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type8" />
            </LinearLayout>
        </LinearLayout>

        <View style="@style/horizontal_split" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/home_page_classify_communication"
                style="@style/home_page_classify_linear_layout">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/icon_communication" />

                <TextView
                    style="@style/home_page_classify_text"
                    android:text="@string/type9" />
            </LinearLayout>

            <LinearLayout
                style="@style/home_page_classify_linear_layout">
            </LinearLayout>

        </LinearLayout>

        <View style="@style/horizontal_split" />

    </LinearLayout>

</LinearLayout>